# kokomi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  add_spaces_ui.py  docker-compose.yml  main.py  pyproject.toml  replace_call_html.py  rewrite_call.py  server.py  test_live.py  test_live2.py  update_aura.py  update_call_thinking.py
.github/workflows/: docker-publish.yml
app/: __init__.py  config.py  llm.py  mcp.py  models.py  rag.py  storage.py
app/routers/: characters.py  chat.py  conversations.py  mcp_servers.py  pages.py  prefs.py  spaces.py  voice.py  whatsapp.py  workflows.py
public/: index.html
public/static/js/: app.js
scratch/: test_gemini.py  update_server.py
templates/: base.html  call.html  index.html  settings.html  spaces.html  whatsapp.html
